# ytdlp

./: .gitignore  QUICKSTART.md  README.md  error_log.csv  pyproject.toml
docs/: api-reference.md  architecture.md  development.md  getting-started.md  index.md  migration-guide.md  usage-guide.md
src/sub_downloader/: cli.py  downloader.py  fetcher.py  file_processor.py  main.py  state.py  utils.py
src/sub_downloader/plugins/: base.py  clean_txt.py
src/ytdlp_subs/: __init__.py
src/ytdlp_subs/application/: __init__.py  container.py
src/ytdlp_subs/application/services/: file_processor.py  filename_generator.py  subtitle_downloader.py
src/ytdlp_subs/application/use_cases/: download_orchestrator.py
src/ytdlp_subs/domain/: __init__.py  exceptions.py  models.py  repositories.py  services.py
src/ytdlp_subs/infrastructure/: command_executor.py  config.py  logging.py
src/ytdlp_subs/infrastructure/repositories/: __init__.py  cache_repository.py  error_repository.py  subtitle_repository.py  video_repository.py
src/ytdlp_subs/presentation/: cli.py
tests/: test_video_repository.py
